# nadeo_api_python

./: .gitignore  pyproject.toml
nadeo_api/: __init__.py  nadeo_live_services.py  nadeo_services.py  trackmania_api.py  ubisoft_services.py
nadeo_api/authenticators/: nadeo.py  trackmania.py  ubisoft.py
tests/: account_info.json.template  test_logins.py  test_nadeo_services.py  test_tm_api.py  test_ubisoft_services.py
