[tool.poetry]
name = "nadeo_api"
version = "0.1.0"
description = ""
authors = ["Bremer <cork@dingens.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
pytest = "^7.4.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
